* applied java16 stream method