@@ -1,17 +1,16 @@
 package io.jexxa.tutorials.bookstorej16.applicationservice;
 
-import static io.jexxa.tutorials.bookstorej16.domain.aggregate.Book.newBook;
-
-import java.util.List;
-import java.util.Objects;
-import java.util.stream.Collectors;
-
 import io.jexxa.addend.applicationcore.ApplicationService;
 import io.jexxa.tutorials.bookstorej16.domain.aggregate.Book;
 import io.jexxa.tutorials.bookstorej16.domain.businessexception.BookNotInStockException;
 import io.jexxa.tutorials.bookstorej16.domain.valueobject.ISBN13;
 import io.jexxa.tutorials.bookstorej16.domainservice.IBookRepository;
 import io.jexxa.tutorials.bookstorej16.domainservice.IDomainEventPublisher;
+
+import java.util.List;
+import java.util.Objects;
+
+import static io.jexxa.tutorials.bookstorej16.domain.aggregate.Book.newBook;
 
 @SuppressWarnings("unused")
 @ApplicationService
@@ -94,7 +93,7 @@ public class BookStoreService
                 .getAll()
                 .stream()
                 .map(Book::getISBN13)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
